Improvements: - Able to display the audio wave panel - Bug fixed in the MenuBarUtils by taking the URL given a directory url 'file:....'. This will get images when running the software from an IDE - Added more components to the configuration file to get the spectrogram - currently this option is not enable - Functionality was extended for the SpeechManager - It retrieves the microphone data - It can be run from an IDE. No need to run ant anymore. Now, it can be debug using an IDE